# Proj2_EAKA

./: .gitignore  Dokumentation.md  Dokumentation.tex  README.md  plan.md  planv2.md
kinect-input/: CMakeLists.txt  README.md
kinect-input-rust/: Cargo.toml  README.md
kinect-input-rust/src/: body_state.rs  gesture_detector.rs  key_sender.rs  lib.rs  main.rs
kinect-input-rust/src/sources/: manual_source.rs  mock_source.rs  mod.rs
kinect-input/src/: body_state.h  gesture_detector.cpp  gesture_detector.h  key_sender.cpp  key_sender.h  main.cpp
kinect-input/src/sources/: manual_source.cpp  manual_source.h  mock_source.cpp  mock_source.h  source.h
kinect-input/tests/: test_gesture_detector.cpp
prototyp/: body_state.py  gesture_detector.py  key_sender.py  main.py  test_gesture_detector.py
prototyp/sources/: manual_source.py  mock_source.py
prototyp/webcam/: README.md  config.py  detector.py  keysender.py  main.py  overlay.py  pipeline.py  sources.py  test_detector.py  webcam_source.py  zones.py
webcam-rust/: Cargo.toml  README.md
webcam-rust/.cargo/: config.toml
webcam-rust/src/: config.rs  detector.rs  keysender.rs  launcher.rs  lib.rs  main.rs  overlay.rs  pipeline.rs  sources.rs  webcam_source.rs  zones.rs
